@@ -110,7 +110,6 @@ AC_FUNC_VFORK dnl DEFS HAVE_VFORK_H, vfork
 CL_WAITPID dnl DEFS PID_T
 CL_RUSAGE dnl DEFS HAVE_SYS_RESOURCE_H, HAVE_GETRUSAGE, RUSAGE_WHO_T, HAVE_SYS_TIMES_H
 CL_ELOOP       dnl DEFS ELOOP_VALUE
-CL_CLOSEDIR    dnl DEFS VOID_CLOSEDIR
 CL_IOCTL dnl DEFS HAVE_IOCTL, IOCTL_REQUEST_T, IOCTL_ARGUMENT_T, IOCTL_DOTS HAVE_FIONREAD, NEED_SYS_FILIO_H, NEED_SYS_IOCTL_H, HAVE_RELIABLE_FIONREAD
 CL_POLL dnl DEFS HAVE_POLL, HAVE_RELIABLE_POLL
 CL_SELECT dnl DEFS HAVE_SELECT, SELECT_WIDTH_T, SELECT_SET_T, SELECT_CONST, HAVE_RELIABLE_SELECT
