@@ -1,3 +1,13 @@
+2017-10-05  Bruno Haible  <bruno@clisp.org>
+
+	Remove workaround against ancient Cygwin bug (not known to gnulib).
+	* pathname.d (directory_search_scandir): Use closedir, not CLOSEDIR.
+	* unix.d (CLOSEDIR): Remove macro.
+	* configure.in: Don't invoke CL_CLOSEDIR.
+	* m4/closedir.m4: Remove file.
+	* m4/filecharset.m4: Update.
+	* aclocal.m4, src/configure, src/config.h.in: Regenerated.
+
 2017-10-04  Bruno Haible  <bruno@clisp.org>
 
 	maint: Modernize code style of Autoconf macros.
